Fix outline alignment issues

--- a/packages/frontend/src/features/Design/components/Interactive/components/ItemEntry/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/components/ItemEntry/index.module.css
@@ -14,5 +14,4 @@
     outline: 1px solid black;
 
     width: 100%;
-    padding-bottom: 1px;
 }
