--- a/packages/frontend/src/features/Design/components/Interactive/components/TableEntry/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/components/TableEntry/index.module.css
@@ -29,6 +29,10 @@
 .table-entries {
     align-self: end;
 
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+
     width: calc(100% - 16px);
 }
 
